# Luxcore

./: .gitignore  CMakeLists.txt  README.md
include/lux/: lux.h
include/lux/core/: application.h  entry_point.h  logger.h  types.h
sandbox/: CMakeLists.txt  main.cpp
src/core/: application.cpp  logger.cpp
